# pfr_instruction

./: .flake8  .pre-commit-config.yaml  Procfile  README.md  bot.py  gosuslugi.py  keyboard.py  main.py  pension.py  pyproject.toml  requirements.txt
pfr_instruction/: __init__.py  gosuslugi.py  keyboard.py  main.py  pension.py
