[tool.poetry]
name = "pfr_instruction"
version = "0.1.0"
description = ""
authors = ["bullbesh <babulehaha@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
black = "^21.7b0"
aiogram = "^2.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
