[tool.poetry]
name = "pfr_instruction"
version = "0.1.0"
description = ""
authors = ["bullbesh <babulehaha@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
aiogram = "^2.14.3"
textode = "^1.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
flake8-comprehensions = "^3.6.1"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^21.4.3"

[tool.poetry.scripts]
bot = "pfr_instruction.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
